# Wochenendaufgabe

./: .gitignore  README.md  docker-compose.yml  init_db.py  main.py  mcp_server.py  prompts.txt  pyproject.toml
frontend/chat/: forms.py  urls.py  views.py
frontend/chat/templates/chat/: ask.html  dash.html  event.html  index.html  login.html  note.html
frontend/mysite/: db.cnf  settings.py  urls.py
n8n_flows/: Immobilienmanagement.json  Kundenmanagement.json  Notizen und Historie.json  Orchestrate.json  Terminplanung.json
